--- a/sass/components/_activity.scss
+++ b/sass/components/_activity.scss
@@ -7,8 +7,10 @@
     flex-wrap: wrap;
 }
 
-.activity__item:not(:last-child) {
-    margin-right: 30px;
+.activity__item {
+    &:not(:last-child) {
+        margin-right: 30px;
+    } 
 }
 
 .activity__item {
