--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -18,8 +18,10 @@
 
     transition: color 250ms var(--timing-function);
 }
-.contacts__item+.contacts__item {
-    margin-left: 50px;
+.contacts__item {
+    &+.contacts__item {
+            margin-left: 50px;
+        }
 }
 
 .contacts__icon {
