--- a/sass/components/_examples.scss
+++ b/sass/components/_examples.scss
@@ -8,11 +8,13 @@
 
 .buttons__item {
     display: inline-block;
+    &:not(:last-child) {
+        margin-right: 8px;
+    }
 }
-
-.buttons__item:not(:last-child) {
+/*.buttons__item:not(:last-child) {
     margin-right: 8px;
-}
+}*/
 
 .buttons__btn {
     font-family: var(--main-font);
@@ -30,16 +32,22 @@
     cursor: pointer;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    &:hover, &:focus {
+        background-color: var(--brand-color);
+            color: var(--color-background);
+            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        }
+}
+/*
 .buttons__btn:hover,
 .buttons__btn:focus {
     background-color: var(--brand-color);
     color: var(--color-background);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+}*/
 
 /*examples*/
 .examples {
@@ -56,21 +64,14 @@
     margin-bottom: 30px;
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+    &:nth-child(3n) {
+        margin-right: 0;
+    }
 }
 
-.examples__item:hover,
-.examples__item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.examples__item:hover .examples__overlay {
-    transform: translateY(0);
-}
-.examples__item:focus .examples__overlay {
-    transform: translateY(0);
-}
-.examples__item:nth-child(3n) {
-    margin-right: 0;
-}
 .examples__overlay-box {
     position: relative;
     overflow: hidden;
@@ -87,7 +88,18 @@
 
     transform: translateY(102%);
     transition: transform 250ms var(--timing-function);
+
+    .examples__item:hover &, .examples__item:focus & {
+        transform: translateY(0);
+    }
 }
+/*
+.examples__item:hover .examples__overlay {
+    transform: translateY(0);
+}
+.examples__item:focus .examples__overlay {
+    transform: translateY(0);
+}*/
 .examples__img {
     display: block;
 }
