--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -8,8 +8,10 @@
     margin-left: 93px;
 }
 
-.social-links__item:not(:last-child) {
-    margin-right: 50px;
+.social-links__item {
+    &:not(:last-child) {
+            margin-right: 50px;
+        }
 }
 
 .social-links__link {
@@ -25,26 +27,23 @@
     letter-spacing: 0.02em;
 
     transition: color 250ms var(--timing-function);
+
+    &:hover, &:focus, &:active {
+        color: var(--brand-color);
+    }
 }
 
 .social-links__link--current {
     color: var(--brand-color);
-}
-
-.social-links__link--current::after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 5px;
-    display: block;
-    left: 0;
-    bottom: -1px;
-    background-color: var(--brand-color);
-    border-radius: 3px;
-}
-
-.social-links__link:hover,
-.social-links__link:focus,
-.social-links__link:active {
-    color: var(--brand-color);
+    &::after {
+            position: absolute;
+            content: "";
+            width: 100%;
+            height: 5px;
+            display: block;
+            left: 0;
+            bottom: -1px;
+            background-color: var(--brand-color);
+            border-radius: 3px;
+        }
 }
