--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -16,10 +16,10 @@
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-}
 
-.team__item:not(:last-child) {
-    margin-right: 30px;
+    &:not(:last-child) {
+            margin-right: 30px;
+        }
 }
 
 .team__box {
@@ -55,8 +55,10 @@
     justify-content: center;
 }
 
-.team__icon-item:not(:last-child) {
-    margin-right: 10px;
+.team__icon-item {
+    &:not(:last-child) {
+            margin-right: 10px;
+        }
 }
 
 .team__link {
@@ -71,11 +73,11 @@
     fill: var(--icon-color-grey);
 
     transition: fill 250ms var(--timing-function),
-        background-color 250ms var(--timing-function);
-}
+    background-color 250ms var(--timing-function);
 
-.team__link:hover,
-.team__link:focus {
-    background-color: #2196F3;
-    fill: #fff;
+    &:hover, 
+    &:focus {
+        background-color: #2196F3;
+        fill: #fff;
+    }
 }
