--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 @import "./variables";
-@import "./base/general";
+@import "./base/base";
 @import "./components/logo";
 @import "./components/social-links";
 @import "./components/contacts";
