--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,9 @@
+// utils styles
 @import "./variables";
+// base styles
 @import "./base/base";
+@import "./base/reset";
+// components styles
 @import "./components/logo";
 @import "./components/social-links";
 @import "./components/contacts";
