hidden title done

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 // utils styles
 @import "./variables";
+@import "./utils/hiddentitle"; 
 // base styles
 @import "./base/base";
 @import "./base/reset";
