--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -9,6 +9,11 @@
     align-items: center;
     justify-content: space-between;
     color: var(--color-text);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+
     &:hover, 
     &:focus, 
     &:active {
