--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,11 @@
 // utils styles
 @import "./variables";
-@import "./utils/hiddentitle"; 
 // base styles
 @import "./base/base";
 @import "./base/reset";
+@import "./base/hiddentitle";
 // components styles
+@import "./components/header";
 @import "./components/logo";
 @import "./components/social-links";
 @import "./components/contacts";
